# niryo-ros-project

./: .gitignore  LICENSE  README.md
gesture-recognition/: package.xml  setup.py
gesture-recognition/config/: camera_params.yaml
gesture-recognition/gesture-recognition/: camera_handler.py  gesture_classifier.py  gesture_detector.py
src/gesture_control_bringup/: CMakeLists.txt  package.xml
src/gesture_control_bringup/config/: system_params.yaml
src/gesture_control_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/gesture_control_interface/config/: gesture_mappings.yaml
src/gesture_control_interface/gesture_control_interface/: __init__.py  command_publisher.py  gesture_to_command.py
src/gesture_control_interface/launch/: gesture_interface.launch.py
src/gesture_control_interface/msg/: Gesture.msg  RobotCommand.msg
src/gesture_control_interface/srv/: SetGestureMode.srv
src/gesture_control_interface/test/: test_command_publisher.py  test_gesture_to_command.py
src/gesture_recognition/: .gitignore  setup.cfg
src/gesture_recognition/config/: gesture_params.yaml
src/gesture_recognition/gesture_recognition/: __init__.py
src/gesture_recognition/launch/: gesture_detection.launch.py
src/gesture_recognition/test/: test_gesture_classifier.py  test_gesture_detector.py
src/niryo_control/: package.xml  setup.py
src/niryo_control/config/: real_robot.yaml  sim_robot.yaml
src/niryo_control/launch/: gazebo_world.launch.py
src/niryo_control/niryo_control/: real_robot_controller.py  robot_controller.py  sim_robot_controller.py
src/niryo_control/resource/: niryo_control
src/niryo_gazebo/: CMakeLists.txt  package.xml
src/niryo_gazebo/launch/: display_rviz.launch.py  spawn_niryo.launch.py
src/niryo_gazebo/urdf/: ned.urdf.xacro
src/niryo_gazebo/worlds/: niryo_workspace.world
