<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_recognition</name>
  <version>0.1.0</version>
  <description>Gesture recognition package for Niryo Ned2 robot control using OpenCV and MediaPipe</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Python Dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>