<?xml version="1.0"?>
<package format="3">
  <name>gesture_control_bringup</name>
  <version>0.0.1</version>
  <description>gesture_control_bringup package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>gesture_recognition</exec_depend>
  <exec_depend>gesture_control_interface</exec_depend>
  <exec_depend>niryo_control</exec_depend>
  <exec_depend>niryo_gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
