<?xml version="1.0"?>
<package format="3">
  <name>niryo_gazebo</name>
  <version>0.0.1</version>
  <description>niryo_gazebo package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
